force-app/main/default/objects/Generic_Detail_Page_Content__mdt/Generic_Detail_Page_Content__mdt.object-meta.xml
<CustomObject>
    <description>Holds the information about the record type, Section names, Fields sequence for detail page</description>
    <label>Generic Detail Page Content</label>
    <pluralLabel>Generic Detail Pages Content</pluralLabel>
</CustomObject>