force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <description>Holds data type of field to be shown on the data table.</description>
    <label>DataType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>date</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <label>CheckBox</label>
            </value>
            <value>
                <fullName>lookup</fullName>
                <label>Lookup</label>
            </value>
            <value>
                <fullName>textarea</fullName>
                <label>Textarea</label>
            </value>
            <value>
                <fullName>picklist</fullName>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>multipicklist</fullName>
                <label>Multi Picklist</label>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>