force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Extra_Large_Label__c.field-meta.xml
<CustomField>
    <fullName>Extra_Large_Label__c</fullName>
    <description>This field is used for showing extra large labels in UI.</description>
    <inlineHelpText>This field is used for showing extra large labels in UI.</inlineHelpText>
    <label>Extra :Large Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>