force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Field_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Field_Sequence__c</fullName>
    <label>Field Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>