force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Generic_Detail_page__c.field-meta.xml
<CustomField>
    <fullName>Generic_Detail_page__c</fullName>
    <label>Generic Detail page</label>
    <referenceTo>Generic_Detail_page__mdt</referenceTo>
    <relationshipLabel>Generic Detail Pages Content</relationshipLabel>
    <relationshipName>Generic_Detail_Pages_Content</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>