force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <label>HelpText</label>
    <type>TextArea</type>
</CustomField>