force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Length__c</fullName>
    <label>Max Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>