force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Min_Length__c.field-meta.xml
<CustomField>
    <fullName>Min_Length__c</fullName>
    <label>Min Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>