force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Pattern_Mismatch_Message__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Mismatch_Message__c</fullName>
    <label>Pattern Mismatch Message</label>
    <type>TextArea</type>
</CustomField>