force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True, If you want to make field required on edit page.</inlineHelpText>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>