force-app/main/default/objects/Generic_Detail_Page_Content__mdt/fields/Show_On_UI__c.field-meta.xml
<CustomField>
    <fullName>Show_On_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show On UI</label>
    <type>Checkbox</type>
</CustomField>